--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://{garden_tld}
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "yet another digital garden"
@@ -65,3 +65,36 @@ url = "https://www.instagram.com/"
   identifier = "about"
   url = "/about/"
 
+[deployment]
+
+
+[[deployment.targets]]
+# An arbitrary name for this target.
+name = "prod"
+
+URL = "s3://{bucket_name}?region={aws_region}"
+
+# Azure Blob Storage; see https://gocloud.dev/howto/blob/#azure
+# URL = "azblob://$web"
+
+# If you are using a CloudFront CDN, deploy will invalidate the cache as needed.
+cloudFrontDistributionID = {cloudfront_distribution_id}
+
+
+# [[deployment.matchers]] configure behavior for files that match the Pattern.
+# Samples:
+
+[[deployment.matchers]]
+#  Cache static assets for 1 year.
+pattern = "^.+\\.(js|css|svg|ttf)$"
+cacheControl = "max-age=31536000, no-transform, public"
+gzip = true
+
+[[deployment.matchers]]
+pattern = "^.+\\.(png|jpg)$"
+cacheControl = "max-age=31536000, no-transform, public"
+gzip = false
+
+[[deployment.matchers]]
+pattern = "^.+\\.(html|xml|json)$"
+gzip = true
